--- a/hw06/index.html
+++ b/hw06/index.html
@@ -182,10 +182,28 @@
     </div>
   </div>
 
-  <!-- ------------------------------------------------>
+    <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+      <h4>前往你的 Demo 網頁</h4>
+    </div>
+  </div>
+  
+  <!-- ------------------------------------------------> 
+  
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
+      <a href="https://andy091045.github.io/vis2023f/hw06/src/">https://andy091045.github.io/vis2023f/hw06/src/</a>
+      
+      
+      </div>
+  </div> 
+  <!-- <hr>------------------------------------------------> 
+  
+  
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
+        透過Observable plot創建堆疊柱狀圖是一種直觀的方式，讓數據呈現更具視覺效果。Observable提供了強大的繪圖功能，使得製作堆疊柱狀圖變得輕鬆。這種可視化方式能清晰顯示不同數據組成部分的貢獻，提升對數據的理解。透過互動性，觀眾可以更深入地探索數據，使得資訊更生動。Observable的堆疊柱狀圖為數據呈現帶來了新的視野，讓觀眾能夠更容易地發現數據之間的模式和趨勢。
     </div>
   </div>
 
@@ -201,19 +219,53 @@
         </tr>
         <tr>
           <td rowspan="7" id="myTotal"></td>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox1"></td>
+          <td>
+            <input type="checkbox" class="flipswitch" id="myCheckbox1" checked>   
+            </input>          
+          </td>
           <td id='m1'>2</td>
-          <td>Simple baseline - 描述、描述、描述</td>
+          <td>Simple baseline - 利用Plot完成堆疊柱狀圖 </td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox2" checked></td>
-          <td id='m2'>6</td>
-          <td>Medium baseline - 描述、描述、描述 </td>
+          <td>
+            <input type="checkbox" class="flipswitch" id="myCheckbox2" checked>                      
+            </input>
+          </td>
+          <td id='m2'>1</td>
+          <td>Simple baseline - 加入Checkbox input使其可選擇呈現的資料集 </td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
-          <td id='m3'>2</td>
-          <td>Strong baseline - 描述、描述、描述 </td>
+          <td>
+            <input type="checkbox" class="flipswitch" id="myCheckbox3" checked>
+            </input>
+          </td>
+          <td id='m3'>3</td>
+          <td>Medium baseline - 利用SVG完成堆疊柱狀圖(含Checkbox) </td>
+        </tr>
+
+        <tr>
+          <td>
+            <input type="checkbox" class="flipswitch" id="myCheckbox4" checked>
+            </input>
+          </td>
+          <td id='m4'>1</td>
+          <td>Medium baseline - 加入D3的過渡效果 </td>
+        </tr>
+        <tr>
+          <td>
+            <input type="checkbox" class="flipswitch" id="myCheckbox5" checked>
+            </input>
+          </td>
+          <td id='m5'>2</td>
+          <td>Strong baseline - 利用SVG製成的堆疊柱狀圖添加陰影效果 </td>
+        </tr>
+        <tr>
+          <td>
+            <input type="checkbox" class="flipswitch" id="myCheckbox6" checked>
+            </input>
+          </td>
+          <td id='m6'>1</td>
+          <td>Strong baseline - 添加滑鼠游標偵測效果 </td>
         </tr>
       </table>
     </div>
@@ -221,10 +273,10 @@
 
   <!-- ------------------------------------------------>
   <div class="row hw12">
-    <div class="col-md-12 twenty">
-      <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-      </video>
+    <div class="col-md-12 twenty">      
+      <iframe width="100%" height="500" frameborder="0" style="background-color: #FFFFFF"
+  src="https://observablehq.com/embed/33f1ab0731fa7edd@220?cell=*"></iframe>  
+
     </div>
   </div>
 
@@ -265,6 +317,18 @@
 
     if (d3.select("#myCheckbox3").property("checked")){
       score += parseInt(d3.select('#m3').html());   
+    }
+
+    if (d3.select("#myCheckbox4").property("checked")){
+      score += parseInt(d3.select('#m4').html());   
+    }
+
+    if (d3.select("#myCheckbox5").property("checked")){
+      score += parseInt(d3.select('#m5').html());   
+    }
+
+    if (d3.select("#myCheckbox6").property("checked")){
+      score += parseInt(d3.select('#m6').html());   
     }
 
     d3.select("#myTotal").html(score);    
