--- a/hw03/index.html
+++ b/hw03/index.html
@@ -217,7 +217,9 @@
   <div class="row hw12">
     <div class="col-md-12 twenty">
       <h4>心得報告 105 字</h4>
-    </div>
+      <h4>透過讀取JSON檔案，我成功地提取了路徑、行走時間、距離和卡路里等資料，並在Observable上展示了班級人員的地理位置資訊。這次任務讓我深刻體會到了檔案位置的重要性，只有確保清晰的資料位置，才能順利呈現在台灣地圖上，否則畫面將無法正確顯示。透過這次實作，我學到了更有效率地處理JSON檔案以及確保資料連結的重要性。
+    </h4>
+</div>
   </div>
 
   <!-- ------------------------------------------------>
