--- a/hw08/index.html
+++ b/hw08/index.html
@@ -334,33 +334,33 @@
     <div class="row hw12">
         <div class="col-md-12 twenty">
           <h4><u>Simple baseline</u></h4>
-          <h4><u>使用執行檔觀看有氧漫遊圖表回答問題(2pt)</u></h4>
+          <h4><u>使用影片觀看有氧漫遊圖表回答問題(2pt)</u></h4>
           <h5>
             1. 回答數總計最高的是哪個問題哪個選項? (1pt)
           </h5>
           <h5 style="color: red;">
-            Answer: 
+            Answer: "如果健康數據表達能兌換獎勵會提升我使用這個程式的意願""非常同意"。
           </h5>
 
           <h5>
             2. 回答數總計最低的是哪個問題哪個選項? (1pt)
           </h5>
           <h5 style="color: red;">
-            Answer: 
+            Answer: "如果健康數據表達能兌換獎勵會提升我使用這個程式的意願""不同意""非常不同意"。
           </h5>
           <h4><u>使用執行檔觀看主題遊圖表回答問題(2pt)</u></h4>
           <h5>
             1. 平均時間最快完成的組別是哪一組? (0.5pt)
           </h5>
           <h5 style="color: red;">
-            Answer: 
+            Answer: 由於出作業的人不夠細心，所以選第14或第15組的人都對。
           </h5>
 
           <h5>
             2. 平均時間最慢完成的組別是哪一組? (0.5pt)
           </h5>
           <h5 style="color: red;">
-            Answer: 
+            Answer: 由於出作業的人不夠細心，所以選第11或第12組的人都對。
           </h5>
 
           <h5>
@@ -369,7 +369,7 @@
           </h5>
           
           <h5 style="color: red;">
-            Answer: 
+            Answer: 觀察到了很多點點，並且大家幾乎都在30分鐘內完成主題遊。
           </h5>
         </div>
       </div>
@@ -385,20 +385,20 @@
             1. 經過你的觀察，表中的回覆總數大約落在多少?(1pt)
           </h5>
           <h5 style="color: red;">
-            Answer: 
+            Answer: 大概在170左右。
           </h5>
           <h5>
             2. 經過你的推斷，甚麼原因可能造成其與實際修課人數有落差?(1pt)
           </h5>
           <h5 style="color: red;">
-            Answer: 
+            Answer: 原因一: 可能是觀看影片的時候有落差。原因二: 當天來的學生可能沒有操作到程式或是沒有上傳資料。 原因三: 在整理資料的時候沒有整理好。
           </h5>
-          <h4><u>使用執行檔觀看主題遊圖表回答問題(1pt)</u></h4>
+          <h4><u>使用執行檔觀看主題遊圖表以及主題遊資料回答問題(1pt)</u></h4>
           <h5> 
             1. 根據資料集收集到的資料，你覺得還可以做成什麼樣的虛擬視覺化圖表?(1pt)
           </h5>
           <h5 style="color: red;">
-            Answer: 
+            Answer: 長條圖、折線圖。
           </h5>
         </div>
       </div>
