--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <div class="row hw12">
         <div class="col-md-12 twenty">
         <h4><u>成果360影片</u></h4>
-        <iframe width="1920" height="1080" src="https://www.youtube.com/embed/9r0yo-1uliQ" frameborder="0" allowfullscreen></iframe>
+        <iframe width="920" height="517" src="https://www.youtube.com/embed/9r0yo-1uliQ" frameborder="0" allowfullscreen></iframe>
           <!-- <video id="video1" style="width:100%;max-width:100%;" controls="">
             <source src="./HW08.mp4" type="video/mp4">
           </video> -->
@@ -229,6 +229,26 @@
           </h5>
         </div>
       </div>     
+
+    <!-- ------------------------------------------------>
+    <div class="row hw12">
+        <div class="col-md-12 twenty">
+          <h4><u>黃筱崴心得</u></h4>
+          <h5>
+            這次的作業是小組作業，我們主要是做主題遊的資料呈現，一開始我是分配到地板那塊牆，主要是用圓餅圖來呈現「使用主題遊是否會讓人感到放鬆」這個問題的答案分佈，最讓我感到意外的是選擇同意的人數還蠻多的。這個作業比較麻煩的地方是要如何才能讓所有牆面呈現統一風格，也許是一開始的分工有錯，導致我們後面來回修改很多次，浪費了很多時間。還好最後載美術館呈現的還可以，不過還是有很多待改進的地方，總而言之是個有趣的體驗。
+          </h5>
+        </div>
+    </div>     
+
+    <!-- ------------------------------------------------>
+    <div class="row hw12">
+        <div class="col-md-12 twenty">
+          <h4><u>鄭少峰心得</u></h4>
+          <h5>
+            這次課程與師大美術館合作，以Unity 3D視覺化為基礎，教學各種觀察者視角的畫作展覽方式，並應用observable轉換不同的數據呈現方式。其中，Unity的方法特別，不僅是以3D的形式呈現，並且有很多套件能使用下載，有趣而且可延伸至多樣形式，為展覽帶來豐富多彩的體驗。
+          </h5>
+        </div>
+    </div>         
     
     <!-- ------------------------------------------------>
     <div class="row hw12">
