--- a/hw10/index.html
+++ b/hw10/index.html
@@ -266,6 +266,20 @@
          <!-- ------------------------------------------------>
          <div class="row hw12">
             <div class="col-md-12 twenty">
+              <h4><u>何◐◐心得</u></h4>
+              <h5>
+                [聽導覽的心得]
+在師大美術館的「分身術──身體意象的敘事與寓言」展覽中，我被一系列深具表現力的作品所吸引。從「浪歌」的靜謐對比到「捕魚樂」的動態生活描繪，每幅作品都帶領我進入了藝術家的視角，生動地述說著獨特的故事。特別是「興達港的漁夫」展現了漁夫們的勞動之美，他們的肌肉在陽光下顯得格外鮮明，生動地傳達了海港的熱鬧與漁民們的忙碌；而「老翁」這幅作品則展現了東方水墨的傳統美學，被其簡潔而強烈的筆觸所吸引，透過色彩渲染，表達了濃厚的情感，彷彿在靜默中訴說著悠久的故事。藉由導覽的解說，讓我窺見藝術家對生命的理解與表達，給予我深刻的啟發、豐富了我的思想。這次的觀展經驗不僅是對美的感受，也是對生活的深刻感悟，引人深思並感慨萬千。
+
+[作業十心得]
+這次的期末專案在師大美術館的光影走廊展示，是一次難忘且充滿成就感的經驗。團隊的互相支持是我們成功的關鍵，這個過程中我學到了很多實用技術，如observable及Unity等，並且加深了與組員間的友誼。雖然過程中遇到了一些技術上的挑戰，但最終我們克服困難，將作品成功呈現出來。感謝團隊的努力與組長的領導，使我們的專案在展覽中獲得成功。這段經驗不僅提升了我的技術技能，也讓我更加珍惜團隊合作的價值。
+              </h5>
+            </div>
+        </div>     
+
+         <!-- ------------------------------------------------>
+         <div class="row hw12">
+            <div class="col-md-12 twenty">
               <h4><u>楊◐◐心得</u></h4>
               <h5>
                 光影走廊:
